Fixed images path

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 </div>
                 <div class="uk-grid">
                     <div class="uk-width-medium-1-2 uk-width-1-1">
-                        <img src="/img/standard-plan-voip-features.jpg" alt="features-on-grasshopper-plans" class="uk-float-left">
+                        <img src="img/standard-plan-voip-features.jpg" alt="features-on-grasshopper-plans" class="uk-float-left">
                     </div>
                     <div class="uk-width-medium-1-2 uk-width-1-1">
                         <p>However, it’s important to read the fine print. Prepare to pay extra for options like dedicated fax lines, Salesforce integration, and voicemail transcription. As a relatively newer company, DialPad is a good solution for companies that need extra features at an affordable monthly cost.</p>
@@ -572,38 +572,38 @@
                 <div class="uk-grid icons">
                     <div class="uk-width-medium-2-10 uk-width-1-1">
                         <a href="#">
-                            <img src="/img/icon-unlimited-calling-in-the-us-and-canada.png" alt="unlimited-calling-and-texting">
+                            <img src="img/icon-unlimited-calling-in-the-us-and-canada.png" alt="unlimited-calling-and-texting">
                             <div>Unlimited Calling in the U.S. and Canada</div>
                         </a>
                     </div>
                     <div class="uk-width-medium-2-10 uk-width-1-1">
                         <a href="#">
-                            <img src="/img/icon-forward-calls-on-device-outage.png" alt="unlimited-calling-and-texting">
+                            <img src="img/icon-forward-calls-on-device-outage.png" alt="unlimited-calling-and-texting">
                             <div>Forward Calls on Device Outage</div>
                         </a>
                     </div>
                     <div class="uk-width-medium-2-10 uk-width-1-1">
                         <a href="#">
-                            <img src="/img/icon-local-and-toll-free-phone-number.png" alt="unlimited-conferencing">
+                            <img src="img/icon-local-and-toll-free-phone-number.png" alt="unlimited-conferencing">
                             <div>Local and Toll-Free Phone Number</div>
                         </a>
                     </div>
                     <div class="uk-width-medium-2-10 uk-width-1-1">
                         <a href="#">
-                            <img src="/img/icon-unlimited-online-faxing.png" alt="crm-and-app-integrations">
+                            <img src="img/icon-unlimited-online-faxing.png" alt="crm-and-app-integrations">
                             <div>Virtual Fax Extension</div>
                         </a>
                     </div>
                     <div class="uk-width-medium-2-10 uk-width-1-1">
                         <a href="#">
-                            <img src="/img/icon-conference-extension-line.png" alt="crm-and-app-integrations">
+                            <img src="img/icon-conference-extension-line.png" alt="crm-and-app-integrations">
                             <div>Conference Extension Line</div>
                         </a>
                     </div>
                 </div>
                 <div class="uk-grid">
                     <div class="uk-width-medium-3-10 uk-width-1-1">
-                        <img src="/img/logo-ooma.png" class="uk-float-left" alt="ooma">
+                        <img src="img/logo-ooma.png" class="uk-float-left" alt="ooma">
                     </div>
                     <div class="uk-width-medium-7-10 uk-width-1-1">
                         <p>Although global users appreciate the low-cost plans, users report problems with a dated interface. Plus, VoIPstudio relies on third-party apps and doesn't provide a bulk text messaging feature. Both of these issues limit connectivity across devices.</p>
@@ -621,7 +621,7 @@
                             <div class="price">$4.99</div>
                             <div>Per use per month</div>
                         </div>
-                        <div class="uk-width-small-1-5"><img src="/img/icon-live-support-and-chart.svg" alt="live rep support"></div>
+                        <div class="uk-width-small-1-5"><img src="img/icon-live-support-and-chart.svg" alt="live rep support"></div>
                         <div class="uk-width-small-1-5">&nbsp;</div>
                     </div>
                 </div>
